--- a/source/_navbar.html.erb
+++ b/source/_navbar.html.erb
@@ -26,7 +26,7 @@
     <a href="" class="navbar-wagon-item navbar-wagon-link">
       <div class="badge-container">
         <i class="fa fa-envelope-o"></i>
-        <div class="badge badge-blue">3</div>
+        <div id='badge-blue' class="badge">3</div>
       </div>
     </a>
 
@@ -34,7 +34,7 @@
     <div class="navbar-wagon-item">
       <div class="dropdown">
         <img src="http://placehold.it/50x50" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown">
-        <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+        <ul id='navbar-wagon-dropdown-menu' class="dropdown-menu dropdown-menu-right">
           <li><a href="#">Profile</a></li>
           <li><a href="#">Dashboard</a></li>
           <li><a href="#">Log Out</a></li>
