--- a/source/stylesheets/config/_variables.css.scss
+++ b/source/stylesheets/config/_variables.css.scss
@@ -26,11 +26,11 @@ $base-height: 1.4;
 // Scheme
 $brand-color: #D23333;
 
-$red: #EE5F5B;
-$blue: #469AE0;
+$red: #6b0328;
+$blue: #3b5998;
 $yellow: #FDB631;
 $orange: #E67E22;
-$green: #32B796;
+$green: #5fbc6f;
 
 // Gray scale
 $gray-darker:  lighten(#000, 13.5%); // #222
